--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts"
   },
@@ -17,6 +16,8 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "fastify": "^5.6.1"
+    "fastify": "^5.6.1",
+    "knex": "^3.1.0",
+    "sqlite3": "^5.1.7"
   }
 }
