--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^4.1.11"
   }
 }
